# kogot

./: .gitattributes  CMakeLists.txt  CONTRIBUTING.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: codeql.yml  gradle.yml
build-logic/: build.gradle.kts
build-logic/src/main/groovy/: buildlogic.java-null-check.gradle
build-logic/src/main/kotlin/: GenerateGodotTask.kt  buildlogic.java-null-check.gradle.kts  buildlogic.java-styles-conventions.gradle.kts  buildlogic.jvm-godot-registry.gradle.kts  buildlogic.jvm-toolchain-conventions.gradle.kts  buildlogic.kotlin-common-conventions.gradle.kts  buildlogic.kotlin-multiplatform-conventions.gradle.kts
codegen/: build.gradle.kts
docs/: Summary-roadmap-20feb.md  auto-registration.md  classdb-ffm-plan.md  experimental_types.md  ignore.types.md  rules.md  summary-abi.md  typed-arrays-impl.md
godot-extension-register/: gdextension_init.c  gdextension_init.h  jvm_bridge_runtime.c  jvm_bridge_runtime.h
godot-java-api/: build.gradle.kts
godot-java-binding/: build.gradle
godot-java-binding/raw/io/github/kingg22/godot/: GDExtensionCallError.java  GDExtensionCallableCustomCall.java  GDExtensionCallableCustomEqual.java  GDExtensionCallableCustomFree.java  GDExtensionCallableCustomGetArgumentCount.java  GDExtensionCallableCustomHash.java  GDExtensionCallableCustomInfo.java  GDExtensionCallableCustomInfo2.java  GDExtensionCallableCustomIsValid.java  GDExtensionCallableCustomLessThan.java  (+280 more)
godot-java-binding/raw/v4_5_1/: gdextension_interface.h  godot_includes.txt
godot-java-binding/raw/v4_6_1/: gdextension_interface.json  godot_includes.txt
godot-java-bridge/: build.gradle
godot-java-codegen/: build.gradle.kts
godot-version/v4_6_1/: extension_api_unofficial.schema.json
gradle/: libs.versions.toml
jvm-ffm/api/: build.gradle.kts
jvm-ffm/ffm/: build.gradle.kts
jvm-ffm/ffm/tools/jextract-25/runtime/: release
kotlin-native/: gdkotlin.native.gdextension
kotlin-native/api/: build.gradle.kts
kotlin-native/ffi/: build.gradle.kts
kotlin-native/runtime/: build.gradle.kts
kotlin-native/sample/: build.gradle.kts
mi-juego-prueba/: main.tscn
mi-juego-prueba/addons/gdkotlin-native/: gdkotlin.native.gdextension  gdkotlin.native.gdextension.uid
sample/: build.gradle.kts
(+820 files in other folders)
